# trix

./: LICENSE  README.md  meson.build  meson_options.txt
src/: .db.c.swo  .db.c.swp  .main.c.swp  actions.h  db.c  db.h  main.c  meson.build  ui.c  ui.h
subprojects/trixd/: meson.build
