project('torixpkg', 'c')
exec_name = get_option('program_name')
subdir('src')
trixd_proj = subproject('trixd')
add_project_arguments('-DEXECNAME="' + exec_name + '"', language: 'c')
dbus_dep = dependency('dbus-1')
sqlite_dep = dependency('sqlite3')
executable(exec_name, sources, dependencies: [dbus_dep, sqlite_dep])
